tests/iptables_state.save
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT

*mangle
:TM_MARK_NONPROD - [0:0]
-F TM_MARK_NONPROD
-A TM_MARK_NONPROD -j CONNMARK --set-mark 0x2/0xffffffff
-A TM_MARK_NONPROD -j ACCEPT

:TM_MARK_PROD - [0:0]
-F TM_MARK_PROD
-A TM_MARK_PROD -j CONNMARK --set-mark 0x1/0xffffffff
-A TM_MARK_PROD -j ACCEPT

:TM_MARK_NODES - [0:0]
-F TM_MARK_NODES
-A TM_MARK_NODES -s 1.2.3.4 -j TM_MARK_PROD
-A TM_MARK_NODES -p tcp -m tcp --source-port 32768:40959 -j TM_MARK_PROD
-A TM_MARK_NODES -p udp -m udp --source-port 32768:40959 -j TM_MARK_PROD
-A TM_MARK_NODES -p tcp -m tcp --source-port 40960:49151 -j TM_MARK_NONPROD
-A TM_MARK_NODES -p udp -m udp --source-port 40960:49151 -j TM_MARK_NONPROD

:TM_MARK - [0:0]
-F TM_MARK
-A TM_MARK -m state --state ESTABLISHED,RELATED -j ACCEPT
-A TM_MARK -m state --state NEW -m set --match-set tm:prod-containers src -j TM_MARK_PROD
-A TM_MARK -m state --state NEW -m set --match-set tm:nonprod-containers src -j TM_MARK_NONPROD
-A TM_MARK -m state --state NEW -m set --match-set tm:nodes src -j TM_MARK_NODES
-A TM_MARK -m state --state NEW -m set --match-set tm:prod-sources src -j TM_MARK_PROD
-A TM_MARK -m state --state NEW -m set ! --match-set tm:prod-sources src -j TM_MARK_NONPROD

:FORWARD ACCEPT [0:0]
-F FORWARD
-A FORWARD -j TM_MARK

:OUTPUT ACCEPT [0:0]
-F OUTPUT
-A OUTPUT -d 1.2.3.4 -j TM_MARK
COMMIT

*nat
:TM_PASSTHROUGH - [0:0]
-F TM_PASSTHROUGH

:TM_DNAT - [0:0]
-F TM_DNAT

:TM_POSTROUTING_PASSTHROUGH - [0:0]
-F TM_POSTROUTING_PASSTHROUGH
-A TM_POSTROUTING_PASSTHROUGH -p udp -j SNAT --to-source 1.2.3.4
-A TM_POSTROUTING_PASSTHROUGH -p tcp -j SNAT --to-source 1.2.3.4

:TM_POSTROUTING_PROD - [0:0]
-F TM_POSTROUTING_PROD
-A TM_POSTROUTING_PROD -p icmp --icmp-type any -j SNAT --to-source 1.2.3.4
-A TM_POSTROUTING_PROD -p udp -j SNAT --to-source 1.2.3.4:32768-40959
-A TM_POSTROUTING_PROD -p tcp -j SNAT --to-source 1.2.3.4:32768-40959

:TM_POSTROUTING_NONPROD - [0:0]
-F TM_POSTROUTING_NONPROD
-A TM_POSTROUTING_NONPROD -p icmp --icmp-type any -j SNAT --to-source 1.2.3.4
-A TM_POSTROUTING_NONPROD -p udp -j SNAT --to-source 1.2.3.4:40960-49151
-A TM_POSTROUTING_NONPROD -p tcp -j SNAT --to-source 1.2.3.4:40960-49151

:TM_POSTROUTING - [0:0]
-F TM_POSTROUTING
-A TM_POSTROUTING -m set --match-set tm:passthroughs dst -j TM_POSTROUTING_PASSTHROUGH
-A TM_POSTROUTING -m connmark --mark 0x2/0xffffffff -j TM_POSTROUTING_NONPROD
-A TM_POSTROUTING -m connmark --mark 0x1/0xffffffff -j TM_POSTROUTING_PROD

:POSTROUTING ACCEPT [0:0]
-F POSTROUTING
-A POSTROUTING -m set --match-set tm:containers src -j TM_POSTROUTING

:TM_SERVICES - [0:0]
-F TM_SERVICES
-A TM_SERVICES -p tcp -m tcp --dport 13684 -j DNAT --to-destination 127.0.0.1:13684
-A TM_SERVICES -p tcp -m tcp --dport 13685 -j DNAT --to-destination 127.0.0.1:13685

:PREROUTING ACCEPT [0:0]
-F PREROUTING
-A PREROUTING -m set --match-set tm:containers src -d 192.168.10.10 -j TM_SERVICES
-A PREROUTING -m set --match-set tm:passthroughs src -j TM_PASSTHROUGH
-A PREROUTING -j TM_DNAT

:OUTPUT ACCEPT [0:0]
-F OUTPUT
-A OUTPUT -d 1.2.3.4 -j TM_DNAT
COMMIT
