tests/iptables_test_nat_table.save
-P PREROUTING ACCEPT
-P POSTROUTING ACCEPT
-P OUTPUT ACCEPT
-N TM_POSTROUTING_NONPROD
-N TM_POSTROUTING_PROD
-N TM_PREROUTING_PASSTHROUGH
-N TM_PREROUTING_DNAT
-A PREROUTING -j TM_PREROUTING_PASSTHROUGH 
-A PREROUTING -j TM_PREROUTING_DNAT 
-A TM_PREROUTING_DNAT -d 192.168.0.3/32 -p udp -m udp --dport 22 -j SNAT --to 172.31.81.67:5001 
-A TM_PREROUTING_DNAT -d 172.31.81.67/32 -p udp -m udp --dport 5002 -j DNAT --to-destination 192.168.1.13:8000 
-A TM_PREROUTING_DNAT -d 172.31.81.67/32 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 192.168.0.11:8000 
-A TM_PREROUTING_DNAT -d 172.31.81.67/32 -p tcp -m tcp --dport 5003 -j DNAT --to-destination 192.168.1.13:22 
-A TM_PREROUTING_DNAT -d 172.31.81.67/32 -p tcp -m tcp --dport 5001 -j DNAT --to-destination 192.168.0.11:22 
-A TM_PREROUTING_PASSTHROUGH -s 10.197.19.18/32 -j DNAT --to-destination 192.168.3.2 
-A TM_PREROUTING_PASSTHROUGH -s 10.197.19.19/32 -j DNAT --to-destination 192.168.2.2 
-A POSTROUTING -s 192.168.0.0/16 -m mark --mark 0x1 -j TM_POSTROUTING_PROD 
-A POSTROUTING -s 192.168.0.0/16 -m mark --mark 0x2 -j TM_POSTROUTING_NONPROD 
-A TM_POSTROUTING_NONPROD -p udp -j SNAT --to-source 10.197.19.18:40960-49152 
-A TM_POSTROUTING_NONPROD -p tcp -j SNAT --to-source 10.197.19.18:40960-49152 
-A TM_POSTROUTING_PROD -p udp -j SNAT --to-source 10.197.19.18:32768-40959 
-A TM_POSTROUTING_PROD -p tcp -j SNAT --to-source 10.197.19.18:32768-40959
